<?xml version="1.0"?>
<package format="3">
  <name>dzb_description</name>
  <version>0.0.1</version>

  <description>DZB robot description</description>

  <maintainer email="hui1@todo.com">hui1</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>